# hyper_tap

./: README.md
app/: .gitignore  .gitmodules  README.md  components.d.ts  home.json  index.html  package-lock.json  package.json  taskfile.yml  tsconfig.json  vite.config.ts
app/src/: App.vue  main.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/config/: mod.rs
app/src-tauri/src/logger/: mod.rs
app/src-tauri/src/sdk/: mod.rs
app/src-tauri/src/service/: app.rs  mod.rs
app/src-tauri/src/store/: memstore.rs  mod.rs
app/src/components/: CopyIcon.vue  bottom-tabbar.vue  coming-soon.vue  empty.vue  navbar.vue  token-info.vue
app/src/constant/: index.ts
app/src/enums/: accountTabEnum.ts  homeTabEnum copy.ts  homeTabEnum.ts  pageEnum.ts
app/src/layout/: index.vue  other-index.vue
app/src/router/: base.ts  index.ts  modules.ts
app/src/sdk/: price.ts  transport.ts  utils.ts
app/src/store/: mutation-types.ts  types.ts
app/src/styles/: common.less  dialog.css
app/src/utils/: AccountVault.ts  Storage.ts  android-channel.ts  api-service.ts  big-number-utils.ts  common.ts  config.ts  exchange-helper.ts  index.ts  time-utils.ts
server/: .gitignore  Taskfile.yml  docker-compose.yml  go.mod  go.work  go.work.sum
server/dockerfiles/: api.dockerfile
server/fetcher/: go.mod  main.go
server/server/: buf.gen.yaml  buf.yaml  go.mod  go.sum  main.go
server/task-manager/: go.mod  main.go
server/types/: go.mod  order.go
(+87 files in other folders)
