[package]
name = "hyper_app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyper_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4.41"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = { version = "1.0", features = ["backtrace"] }
tokio = { version = "1", features = ["full", "tracing"] }
once_cell = "1.21.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "std",
    "env-filter",
    "time",
    "fmt",
] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
sqlx_migrator = { version = "0.17.0", features = ["sqlite"] }
hex = "0.4.3"
reqwest = { version = "0.12.22", features = ["json"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
